--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "prisma, express",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": " babel-watch src/index.js",
+    "clean": "rm -rf ./node_modules/.cache/babel-loader"
   },
   "author": "Lapxi010",
   "license": "ISC",
@@ -15,6 +16,18 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.8.0"
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@prisma/client": "^4.8.0",
+    "apollo-datasource-rest": "^3.7.0",
+    "apollo-server-express": "^3.11.1",
+    "babel-plugin-import-graphql": "^2.8.1",
+    "babel-watch": "^7.7.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
+    "nodemon": "^2.0.20"
   }
 }
