--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-typescript"],
-  "plugins": ["import-graphql"]
+  "presets": ["@babel/preset-env"],
+  "plugins": ["@babel/plugin-syntax-throw-expressions"]
 }
