--- a/server/package.json
+++ b/server/package.json
@@ -1,33 +1,26 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "prisma, express",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": " babel-watch src/index.js",
-    "clean": "rm -rf ./node_modules/.cache/babel-loader"
+    "start": "babel-watch ./src/index.js"
   },
-  "author": "Lapxi010",
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^18.11.18",
-    "prisma": "^4.8.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
-  },
   "dependencies": {
-    "@babel/core": "^7.20.7",
+    "@babel/plugin-syntax-throw-expressions": "^7.18.6",
     "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
-    "@prisma/client": "^4.8.0",
-    "apollo-datasource-rest": "^3.7.0",
-    "apollo-server-express": "^3.11.1",
-    "babel-plugin-import-graphql": "^2.8.1",
+    "@prisma/client": "^4.8.1",
+    "babel": "^6.23.0",
     "babel-watch": "^7.7.2",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
-    "nodemon": "^2.0.20"
+    "prisma": "^4.8.1"
   }
 }
