--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=6789
-JWT_SECRET=secret
-JWT_SECRET_REFRESH=secret_refresh
+JWT_ACCESS_TOKEN=secret
+JWT_REFRESH_TOKEN=secret_refresh
+CLIENT_URL=http://localhost:3333
