--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
+    "axios": "^1.2.2",
     "babel": "^6.23.0",
     "babel-loader": "^9.1.0",
     "clean-webpack-plugin": "^4.0.0",
