--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,9 @@
     "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.0",
     "prisma": "^4.8.1",
+    "uuid": "^9.0.0",
     "webtorrent": "^1.9.6"
   }
 }
