--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io-client": "^4.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
