--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.0",
     "prisma": "^4.8.1",
+    "socket.io": "^4.6.0",
     "uuid": "^9.0.0",
     "webtorrent": "^1.9.6"
   }
