добавилд эмодзи в чат

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/eslint": "^8.4.10",
     "@types/react": "^18.0.26",
@@ -46,6 +48,7 @@
     "babel-loader": "^9.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
+    "emoji-mart": "^5.5.2",
     "eslint": "^8.31.0",
     "eslint-plugin-react": "^7.31.11",
     "html-webpack-plugin": "^5.5.0",
