--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "babel-watch ./src/index.js"
   },
@@ -26,6 +27,7 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.0",
+    "nodemon": "^2.0.20",
     "prisma": "^4.8.1",
     "socket.io": "^4.6.0",
     "uuid": "^9.0.0",
